# ezd

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
board/: .env  .env.production  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
board/src/: App.tsx  Board.tsx  BoardContext.ts  Debug.tsx  hooks.tsx  widgets.tsx
board/src/components/custom/: json_editor.tsx
board/src/components/ui/: menubar.tsx
board/src/core/: index.ts
board/src/debug/components/: SizeEditor.tsx  WidgetEditor.tsx
board/src/playground/: Playground.tsx  TreeEditor.tsx
board/src/playground/components/: DataEditor.tsx  DatasetReferenceField.tsx  InputReferenceField.tsx  ReferenceField.tsx  SizeEditor.tsx  TreeActions.tsx  WidgetEditor.tsx
board/src/playground/hooks/: useConvertedTree.ts  useInsertWidget.ts  useRemoveWidget.ts
board/src/playground/tree/: CustomDragPreview.tsx  Placeholder.tsx  TreeActions.tsx  TreeNode.tsx  (+2 more)
sdk/: README.md  pyproject.toml
sdk/src/ezd/: __init__.py  core.py  registration.py
sdk/src/ezd/targets/: slack.py
sdk/src/ezd/widgets/: __init__.py  badge.py  barchart.py  card.py  container.py  image.py  linechart.py  richtext.py  table.py  title.py
sdk/src/ezd/widgets/common/: yaxis.py
sdk/tests/: test_widgets.py
sdk/tests/integration/: README.md  test_sdk.py
server/: package-lock.json  package.json  tsconfig.json
server/src/: definitions.ts  index.ts  logger.ts  queue.ts
server/src/engine/: distribution.ts  render.ts  screenshot.ts
tests/integration/: payload.json  test.sh
(+30 files in other folders)
