[project]
name = "ezd"
version = "0.1.0"
description = "Python SDK to interact with EZD"
authors = [
    {name = "Quentin Amirault", email = "amirault.quentin@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "pydantic>=2.8.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache 2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.2",
]
